--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<sonar.projectKey>lucas20201</sonar.projectKey>
+		<sonar.projectKey>spiprojeto</sonar.projectKey>
 		<sonar.organization>lukas-r4</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.login>5d2fe5f1e5e9554fe412d6a13c5702d3b791b125</sonar.login>
+		<sonar.login>5c8fe123d94252f468d93088115093ea25389bf9</sonar.login>
 	</properties>
 
 	<dependencies>
